# deepseek-fine-tuning

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  watch-gpu.sh
src/fine_tuning/: __about__.py
src/fine_tuning/clients/: openai_api_client.py  simple_argilla_dataset_client.py
src/fine_tuning/prompt_generation/: prompt_generation.ipynb
src/fine_tuning/train_recipe_model/: examples.md  train_recipe_model.ipynb
src/fine_tuning/training_sandbox/: training_sandbox.ipynb
tests/: __init__.py
